flux/monitoring/prom-stack/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.home`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`grafana.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`grafana.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: cert-grafana
