flux/monitoring/prom-stack/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prom
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.home`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`prom.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prom-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prom.home`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`prom.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: cert-prom
